CHANGELOG VERSIONX

VersionX 1.0 Alpha3 (to be released)
- Renamed processor files to lowercase to prevent it from failing.
- [#9/#15] Better distribution of columns in main grid (smooth-graphics)
- [#10] Remove mention of an overview from lexicons
- [#17] Added changelog to the installer / build
- [#13] Changed modified/created/restored values to lexicon references.

VersionX 1.0 Alpha2 (Released 11/01/2011)
- [#9] Added readme & license
- [#8] General improvement lexicon (smooth-graphics)
- Fixed fatal IE issue (breaking on "class" and "new")
- Fixed fatal issue when a new resource has been created.
- [#3] Added germahttps://github.com/Mark-H/VersionX/issues/closed#issue/10n translation (smooth-graphics)